--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   bot_toast: ^4.1.3
   responsive_framework: ^1.1.1
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +56,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    
     - asset/icon/
 
  
