--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   responsive_framework: ^1.1.1
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
+  flutter_statusbarcolor_ns: ^0.5.0
 
 dev_dependencies:
   flutter_test:
