--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
   flutter_statusbarcolor_ns: ^0.5.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
