--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_statusbarcolor_ns: ^0.5.0
   flutter_rating_bar: ^4.0.1
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
