--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_statusbarcolor_ns: ^0.5.0
   flutter_rating_bar: ^4.0.1
   flutter_slidable: ^3.1.0
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
